--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-project",
-  "homepage": "https://fmtechnologies.github.io",
+  "homepage": "https://fmtechnologies.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
